--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tuto-Webpack</title>
+        <title>Calendar</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
